--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 @font-face {
-  font-family: "Anton";
-  src: url(fonts/Anton-Regular.ttf);
+  font-family: "Satisfy";
+  src: url(fonts/Satisfy-Regular.ttf);
 }
 
 body {
@@ -23,10 +23,10 @@ header #title {
   width: 50%;
 }
 header p {
-  color: white;
+  color: #c86bfa;
   font-size: 3vw;
   height: 1vw;
-  font-family: "Anton";
+  font-family: "Satisfy";
   letter-spacing: 0.3vw;
 }
 header #fizz {
@@ -39,17 +39,19 @@ header #wizz {
 header ul {
   margin: 0;
   padding: 0;
+  margin-top: 2.5vw;
   list-style-type: none;
+  display: flex;
+  gap: 5vw;
+  margin-right: 5vw;
 }
 header ul li a {
   color: black;
   text-decoration: none;
-  display: block;
-  float: right;
-  font-size: 10vw;
+  font-size: 3vw;
 }
 .hero {
-  background-color: yellow;
+  background-color: #c86bfa;
   width: 100%;
   height: 10vw;
   padding-top: 10vw;
@@ -60,6 +62,61 @@ header ul li a {
   grid-template-columns: 1fr 1fr 1fr;
   grid-auto-rows: 30vw;
   align-content: stretch;
-  margin-top: 2vw;
+  background-color: #3d0066;
+  padding-top: 2vw;
   justify-items: center;
+}
+.can p {
+  color: #c86bfa;
+}
+button {
+  width: 100%;
+  background-color: #ffee32;
+  border: none;
+}
+
+button a {
+  text-decoration: none;
+  color: #03071e;
+  font-size: 1.2vw;
+}
+footer {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  justify-content: flex-start;
+  background-color: #3d0066;
+  border-top: solid 0.1vw#03071e;
+}
+footer .contact-form {
+  grid-column: 1/4;
+  grid-row: 1/2;
+  justify-content: center;
+  gap: 20%;
+  font-size: 1.5vw;
+  color: #c86bfa;
+}
+input[type="submit"] {
+  margin-top: 1vw;
+  height: 2vw;
+  background-color: #ffee32;
+  font-size: 1vw;
+}
+input[type="text"],
+select,
+textarea {
+  height: 1.5vw;
+  font-size: 1vw;
+  margin-left: 2vw;
+}
+label {
+  font-family: "DM";
+  font-size: 1.2vw;
+}
+footer p {
+  grid-column: 1/2;
+  grid-row: 2/3;
+  color: #c86bfa;
+  margin-left: 2vw;
+  margin-top: 3vw;
 }
