--- a/css/main.css
+++ b/css/main.css
@@ -69,6 +69,23 @@ header ul li a {
   justify-items: center;
 }
 
+.autoBlur {
+  /* transition: filter 0.5s ease-out; */
+}
+
+.autoBlur p {
+  color: #c86bfa;
+}
+
+.autoBlur img {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+  border-radius: 5px;
+  /* transition: filter 0.3 ease;
+  filter: blur(20px); */
+}
+
 .description {
   display: flex;
   flex-direction: column;
@@ -77,17 +94,6 @@ header ul li a {
   text-align: center;
   width: 100%;
   padding: 10px 0;
-}
-
-.can p {
-  color: #c86bfa;
-}
-
-.can img {
-  width: 100%;
-  height: auto;
-  object-fit: cover;
-  border-radius: 5px;
 }
 
 .plus-button {
