--- a/css/main.css
+++ b/css/main.css
@@ -70,7 +70,9 @@ header ul li a {
 }
 
 .autoBlur {
-  /* transition: filter 0.5s ease-out; */
+  position: relative;
+  overflow: hidden;
+  transition: filter 0.3s ease-out;
 }
 
 .autoBlur p {
