--- a/css/main.css
+++ b/css/main.css
@@ -18,6 +18,7 @@ header {
   border: bottom;
   background-color: #3d0066;
   margin-bottom: 10vw;
+  z-index: 1;
 }
 header #title {
   width: 50%;
