--- a/css/detail.css
+++ b/css/detail.css
@@ -22,10 +22,6 @@ header {
 header #title {
   width: 50%;
 }
-
-#title-link {
-  text-decoration: none;
-}
 header p {
   color: #c86bfa;
   font-size: 3vw;
@@ -58,6 +54,59 @@ main {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: auto;
+  padding-top: 15vw;
+  justify-items: center;
+  align-items: center;
+  background-color: #3d0066;
+  padding-bottom: 20vw;
+}
+main figure {
+  grid-column: 1/2;
+}
+main #info {
+  grid-column: 2/3;
+  color: #ffee32;
+  margin-right: 10%;
+  font-family: "Satisfy";
+  font-size: 1.5vw;
+}
+main #info h1 {
+  color: #c86bfa;
+  text-decoration: underline;
+}
+main #info button {
+  font-family: "Satisfy";
+  width: 100%;
+  font-size: 1.8vw;
+  background-color: #ffee32;
+  color: #c86bfa;
+  padding: 0.5vw;
+  margin-top: 1vw;
+}
+main #info .sizes {
+  display: flex;
+}
+main #info .smaller {
+  width: 50%;
+  height: 2vw;
+  background-color: #c86bfa;
+  border: solid 0.1vw #03071e;
+}
+main #info .bigger {
+  width: 50%;
+  height: 2vw;
+  margin-left: 2%;
+  background-color: #c86bfa;
+  border: solid 0.1vw #03071e;
+}
+#description {
+  display: flex;
+}
+.size {
+  color: #03071e;
+  font-size: 1.5vw;
+  text-align: center;
+  margin: 0;
 }
 
 footer {
