--- a/css/detail.css
+++ b/css/detail.css
@@ -6,6 +6,7 @@
 body {
   margin: 0;
   padding: 0;
+  background-color: #3d0066;
 }
 
 header {
@@ -29,10 +30,6 @@ header p {
   font-family: "Satisfy";
   letter-spacing: 0.3vw;
 }
-#title a {
-  text-decoration: none;
-}
-
 header #fizz {
   margin-top: 0.5vw;
   margin-left: 13%;
@@ -62,7 +59,7 @@ main {
   justify-items: center;
   align-items: center;
   background-color: #3d0066;
-  padding-bottom: 20vw;
+  padding-bottom: 15vw;
 }
 main figure {
   grid-column: 1/2;
@@ -90,27 +87,56 @@ main #info button {
 main #info .sizes {
   display: flex;
 }
-main #info .smaller {
-  width: 50%;
-  height: 2vw;
-  background-color: #c86bfa;
-  border: solid 0.1vw #03071e;
-}
-main #info .bigger {
-  width: 50%;
-  height: 2vw;
+
+.label {
+  font-family: "Satisfy";
+  font-size: 1.5vw;
+  color: #c86bfa;
   margin-left: 2%;
-  background-color: #c86bfa;
-  border: solid 0.1vw #03071e;
+  margin-right: 10%;
 }
 #description {
   display: flex;
+  background-color: #3d0066;
+  gap: 60%;
+  border-bottom: solid 0.01vw #03071e;
+}
+#description h1 {
+  font-family: "Satisfy";
+  color: #ffee32;
+  font-size: 2vw;
+  margin-left: 15%;
+}
+
+#description #plus {
+  background-color: #3d0066;
+  border: none;
+  font-size: 2vw;
+  color: #ffee32;
 }
 .size {
   color: #03071e;
   font-size: 1.5vw;
   text-align: center;
   margin: 0;
+}
+#about {
+  display: none;
+  padding-left: 15%;
+  width: 50%;
+  height: 30vw;
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 1.5s ease-in-out;
+}
+#about h1 {
+  color: #ffee32;
+  font-family: "Satisfy";
+  font-size: 2vw;
+}
+#about p {
+  color: #c86bfa;
+  font-size: 1.3vw;
 }
 
 footer {
