--- a/css/main.css
+++ b/css/main.css
@@ -59,10 +59,131 @@ header ul li a {
 }
 
 /* main part  */
-.hero {
+/* .hero {
   background-color: transparent;
   width: 100vw;
   height: 80vh;
+} */
+
+.hero {
+  background-color: #c86bfa;
+  width: 100vw;
+  height: 80vh;
+  overflow: hidden;
+  position: relative;
+  margin-top: 0;
+  padding-top: 10vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* css animation in hero */
+
+/* .layer {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  position: absolute;
+  top: 0;
+  left: 0;
+  transition: 1.2s cubic-bezier(0.71, 0, 0.38, 1);
+} */
+
+#layer1 {
+  clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  position: absolute;
+  top: 0;
+  left: 0;
+  transition: 1.2s cubic-bezier(0.71, 0, 0.38, 1);
+  z-index: 2;
+}
+
+#layer2 {
+  /* clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%); */
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  position: absolute;
+  top: 0;
+  left: 0;
+  transition: 1.2s cubic-bezier(0.71, 0, 0.38, 1);
+  z-index: 1;
+}
+
+#layer2 .text {
+  color: aliceblue;
+}
+.can-container {
+  width: 200px;
+  position: relative;
+  overflow: hidden;
+  margin-top: 20px;
+}
+.can-img {
+  width: 40%;
+  max-width: 100%;
+  object-fit: contain;
+}
+.wrapper {
+  position: absolute;
+  height: 90%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -53%);
+  mix-blend-mode: multiply;
+  /* transition: 10s cubic-bezier(0.71, 0, 0.38, 1); */
+  transition: transform 2.5s ease-in-out;
+}
+
+.text {
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  font-size: 8rem;
+  color: aliceblue;
+  position: absolute;
+  transition: 1.2s cubic-bezier(0.71, 0, 0.38, 1);
+  display: none;
+}
+
+#toggle {
+  display: none;
+}
+
+.layer label {
+  display: block;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  box-sizing: border-box;
+  padding: 10px 20px;
+  font-size: 1.5rem;
+  border-radius: 20px;
+  cursor: pointer;
+  margin-top: 75px;
+}
+
+#toggle:checked ~ #layer1 {
+  left: -50%;
+}
+#toggle:checked ~ #layer1 .text {
+  transform: translateX(150%);
+}
+
+#toggle:not(:checked) ~ #layer2 .can-container .wrapper {
+  left: 150%;
+}
+#toggle:not(:checked) ~ #layer2 .text {
+  transform: translateX(-150%);
 }
 
 /* css animation in hero */
