--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,7 @@ header {
   justify-content: flex-start;
   position: fixed;
   height: 10vw;
+  top: 0;
   gap: 57%;
   width: 100%;
   border-bottom: none;
@@ -62,22 +63,29 @@ header ul #cart-icon {
   height: 4vw;
 }
 
+.cart-count {
+  position: relative;
+  top: 5em;
+  right: 3vw;
+  background-color: #fafafa;
+  color: rgb(131, 6, 6);
+  font-size: 1rem;
+  padding: 2px 6px;
+  border-radius: 60%;
+  font-weight: bold;
+}
+
 /* main part  */
-/* .hero {
-  background-color: transparent;
-  width: 100vw;
-  height: 80vh;
-} */
 
 .hero {
   background-color: #c86bfa;
   width: 100vw;
-  height: 80vh;
+  height: 100vh;
   overflow: hidden;
   position: relative;
+  /* margin-top: 10vh; */
   margin-top: 0;
   margin-inline: auto;
-  padding-top: 10vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -101,18 +109,18 @@ header ul #cart-icon {
 }
 
 .hero img {
-  max-width: 80%;
-  max-height: 80%;
+  max-width: 90%;
+  max-height: 90%;
   object-fit: contain;
 }
 .item {
-  width: 100vw;
-  height: 100vh;
+  width: 60vw;
+  height: 70vh;
   /* top: 50%; */
   margin-top: 59vw;
   transform: translate(-50%, -50%);
   position: absolute;
-  left: max(calc(200px * 4), 100%);
+  left: max(calc(200px * 5), 100%);
   animation-name: leftScroll;
   animation-duration: 50s;
   animation-timing-function: linear;
@@ -126,19 +134,23 @@ header ul #cart-icon {
 }
 
 #item1 {
-  animation-delay: calc(50s / 4 * (4 - 1) * -1);
+  animation-delay: calc(50s / 5 * (5 - 1) * -1);
 }
 
 #item2 {
-  animation-delay: calc(50s / 4 * (4 - 2) * -1);
+  animation-delay: calc(50s / 5 * (5 - 2) * -1);
 }
 
 #item3 {
-  animation-delay: calc(50s / 4 * (4 - 3) * -1);
+  animation-delay: calc(50s / 5 * (5 - 3) * -1);
 }
 
 #item4 {
-  animation-delay: calc(50s / 4 * (4 - 4) * -1);
+  animation-delay: calc(50s / 5 * (5 - 4) * -1);
+}
+
+#item5 {
+  animation-delay: calc(50s / 5 * (5 - 5) * -1);
 }
 
 /* main */
@@ -149,7 +161,7 @@ header ul #cart-icon {
   width: 96vw;
   max-width: 100%;
   gap: 2vw;
-  margin: 0 auto;
+  margin: 20vw auto;
   /* align-content: stretch; */
   background-color: #20113a;
   padding: 2vw;
@@ -182,6 +194,7 @@ header ul #cart-icon {
   justify-content: center;
   text-align: center;
   width: 100%;
+  font-size: 3vw;
   padding: 10px 0;
 }
 
@@ -230,18 +243,6 @@ header ul #cart-icon {
   padding: 15px;
   border-radius: 10px;
   max-width: 250px;
-}
-
-.cart-count {
-  position: absolute;
-  top: 2.8rem;
-  right: 2rem;
-  background-color: #fafafa;
-  color: rgb(131, 6, 6);
-  font-size: 1rem;
-  padding: 2px 6px;
-  border-radius: 60%;
-  font-weight: bold;
 }
 
 .cart-items {
@@ -329,57 +330,54 @@ footer p {
 
 /* responsive design */
 
-@media (max-width: 1200px) {
+@media (max-width: 1000px) {
   .hero {
-    height: 70vh;
-    padding-top: 5vh;
+    height: 100vh;
+    width: 100vw;
+    padding-top: 8vh;
   }
 
   .hero img {
-    max-width: 70%;
-    max-height: 70%;
+    max-width: 80%;
+    max-height: 80%;
   }
 
   .item {
-    width: 90vw;
-    height: 60vh;
+    width: 80vw;
+    height: 50vh;
+    margin-top: 55vw;
   }
 
   .item img {
-    width: 100%;
+    width: 130%;
   }
 
   .archive {
     grid-template-columns: repeat(3, minmax(0, 1fr));
+    gap: 3vw;
+    padding: 3vw;
+  }
+
+  .description {
+    font-size: 2vw;
+  }
+
+  .plus-button {
+    width: 35px;
+    height: 35px;
+    font-size: 1.3rem;
+  }
+
+  footer .contact-form {
+    font-size: 4vw;
+  }
+
+  footer p {
+    font-size: 3vw;
   }
 }
 
-@media (max-width: 900px) {
-  .hero {
-    height: 60vh;
-    padding-top: 5vh;
-  }
-
-  .hero img {
-    max-width: 60%;
-    max-height: 60%;
-  }
-
-  .item {
-    width: 95vw;
-    height: 50vh;
-  }
-
-  .item img {
-    width: 100%;
-  }
-
-  .archive {
-    grid-template-columns: repeat(2, minmax(0, 1fr));
-  }
-}
-
-@media (max-width: 550px) {
+@media (max-width: 700px) {
   .hero {
     height: 50vh;
     padding-top: 5vh;
@@ -391,15 +389,74 @@ footer p {
   }
 
   .item {
-    width: 100vw;
-    height: 40vh;
+    width: 95vw;
+    height: 45vh;
+    margin-top: 50vw;
   }
 
   .item img {
-    width: 100%;
+    width: 120%;
   }
 
   .archive {
     grid-template-columns: repeat(2, minmax(0, 1fr));
+    gap: 4vw;
+    padding: 4vw;
+  }
+
+  .description {
+    font-size: 4vw;
+  }
+
+  .plus-button {
+    width: 30px;
+    height: 30px;
+    font-size: 1rem;
+  }
+
+  footer .contact-form {
+    font-size: 5vw;
+  }
+
+  footer p {
+    font-size: 4vw;
+  }
+}
+
+@media (min-width: 430px) {
+  .hero {
+    height: 40vh;
+    padding-top: 5vh;
+  }
+
+  .hero img {
+    max-width: 70%;
+    max-height: 70%;
+  }
+
+  .item {
+    width: 90vw;
+    height: 35vh;
+    margin-top: 45vw;
+  }
+
+  .item img {
+    width: 120%;
+  }
+
+  archive {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+    gap: 3vw;
+    padding: 3vw;
+  }
+
+  .description {
+    font-size: 3vw;
+  }
+
+  .plus-button {
+    width: 30px;
+    height: 30px;
+    font-size: 1rem;
   }
 }
