--- a/css/main.css
+++ b/css/main.css
@@ -79,17 +79,17 @@ header ul #cart-icon {
 
 .hero {
   background-color: #c86bfa;
-  width: 100vw;
-  height: 100vh;
-  overflow: hidden;
-  position: relative;
-  /* margin-top: 10vh; */
-  margin-top: 0;
-  margin-inline: auto;
+  width: 100%;
+  height: 80vh;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  overflow: hidden;
+  position: relative;
+  margin-top: 0;
+  padding-top: 12vh;
+  margin-inline: auto;
   mask-image: linear-gradient(
     to right,
     rgba(0, 0, 0, 0),
@@ -97,6 +97,7 @@ header ul #cart-icon {
     rgba(0, 0, 0, 1) 80%,
     rgba(0, 0, 0, 0)
   );
+  transition: height 0.5s ease-in-out;
 }
 
 @keyframes leftScroll {
@@ -108,19 +109,19 @@ header ul #cart-icon {
   }
 }
 
-.hero img {
-  max-width: 90%;
-  max-height: 90%;
+.hero-img {
+  max-width: 50vh;
+  max-height: 50%;
   object-fit: contain;
 }
 .item {
-  width: 60vw;
-  height: 70vh;
+  width: 60vh;
+  height: 60vh;
   /* top: 50%; */
-  margin-top: 59vw;
-  transform: translate(-50%, -50%);
+  margin-top: 5vh;
   position: absolute;
-  left: max(calc(200px * 5), 100%);
+  left: 50%;
+  transform: translateX(-50%);
   animation-name: leftScroll;
   animation-duration: 50s;
   animation-timing-function: linear;
@@ -128,7 +129,8 @@ header ul #cart-icon {
 }
 
 .item img {
-  width: 150%;
+  width: 60%;
+  max-width: auto;
   height: auto;
   object-fit: contain;
 }
@@ -161,7 +163,7 @@ header ul #cart-icon {
   width: 96vw;
   max-width: 100%;
   gap: 2vw;
-  margin: 20vw auto;
+  margin: 0vw auto;
   /* align-content: stretch; */
   background-color: #20113a;
   padding: 2vw;
@@ -326,30 +328,30 @@ footer p {
   color: #c86bfa;
   margin-left: 2vw;
   margin-top: 3vw;
+  font-size: 1vw;
 }
 
 /* responsive design */
 
 @media (max-width: 1000px) {
   .hero {
-    height: 100vh;
-    width: 100vw;
-    padding-top: 8vh;
+    min-height: 60vh;
+    padding-top: 10vh;
   }
 
-  .hero img {
-    max-width: 80%;
-    max-height: 80%;
+  .hero-img {
+    max-width: 60%;
+    max-height: 60%;
   }
 
   .item {
-    width: 80vw;
+    width: 70vw;
     height: 50vh;
-    margin-top: 55vw;
+    margin-top: 8vh;
   }
 
   .item img {
-    width: 130%;
+    width: 80%;
   }
 
   .archive {
@@ -369,33 +371,33 @@ footer p {
   }
 
   footer .contact-form {
-    font-size: 4vw;
+    font-size: 3vw;
   }
 
   footer p {
-    font-size: 3vw;
+    font-size: 2vw;
   }
 }
 
 @media (max-width: 700px) {
   .hero {
-    height: 50vh;
-    padding-top: 5vh;
+    height: 60vh;
+    padding-top: 8vh;
   }
 
-  .hero img {
-    max-width: 50%;
-    max-height: 50%;
+  .hero-img {
+    max-width: 70%;
+    max-height: 70%;
   }
 
   .item {
-    width: 95vw;
-    height: 45vh;
-    margin-top: 50vw;
+    width: 90vw;
+    height: 40vh;
+    margin-top: 10vh;
   }
 
   .item img {
-    width: 120%;
+    width: 90%;
   }
 
   .archive {
@@ -423,40 +425,48 @@ footer p {
   }
 }
 
-@media (min-width: 430px) {
+/* @media (min-width: 430px) {
   .hero {
     height: 40vh;
     padding-top: 5vh;
-  }
+  } */
 
-  .hero img {
-    max-width: 70%;
-    max-height: 70%;
-  }
+/* .hero-img {
+    max-width: 50%;
+    max-height: 50%;
+  } */
 
-  .item {
+/* .item {
     width: 90vw;
     height: 35vh;
     margin-top: 45vw;
-  }
+  } */
 
-  .item img {
-    width: 120%;
-  }
-
+/* .item img {
+    width: 40%;
+  } */
+/* 
   archive {
     grid-template-columns: repeat(2, minmax(0, 1fr));
     gap: 3vw;
     padding: 3vw;
-  }
+  } */
 
-  .description {
+/* .description {
     font-size: 3vw;
-  }
+  } */
 
-  .plus-button {
+/* .plus-button {
     width: 30px;
     height: 30px;
     font-size: 1rem;
+  } */
+
+/* footer .contact-form {
+    font-size: 6vw;
+  } */
+
+/* footer p {
+    font-size: 2vw;
   }
-}
+} */
