--- a/css/main.css
+++ b/css/main.css
@@ -64,15 +64,20 @@ header ul #cart-icon {
 }
 
 .cart-count {
-  position: relative;
-  top: 5em;
-  right: 3vw;
+  position: absolute;
+  top: 0;
+  right: 2vw;
+  transform: translate(-100%, 100%);
   background-color: #fafafa;
   color: rgb(131, 6, 6);
-  font-size: 1rem;
-  padding: 2px 6px;
-  border-radius: 60%;
+  font-size: 1vw;
+  width: 2vw;
+  height: 2vw;
+  border-radius: 50%;
   font-weight: bold;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 /* main part  */
@@ -334,6 +339,9 @@ footer p {
 /* responsive design */
 
 @media (max-width: 1000px) {
+  .cart-count {
+  }
+
   .hero {
     min-height: 60vh;
     padding-top: 10vh;
@@ -380,8 +388,11 @@ footer p {
 }
 
 @media (max-width: 700px) {
+  .cart-count {
+  }
+
   .hero {
-    height: 60vh;
+    height: 20vh;
     padding-top: 8vh;
   }
 
