--- a/css/detail.css
+++ b/css/detail.css
@@ -56,6 +56,24 @@ header ul li a {
   text-decoration: none;
   font-size: 3vw;
 }
+
+.cart-count {
+  position: absolute;
+  top: 0;
+  right: 2vw;
+  transform: translate(-100%, 100%);
+  background-color: #fafafa;
+  color: rgb(131, 6, 6);
+  font-size: 1vw;
+  width: 2vw;
+  height: 2vw;
+  border-radius: 50%;
+  font-weight: bold;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 main {
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -68,6 +86,10 @@ main {
 }
 main figure {
   grid-column: 1/2;
+}
+
+figure img {
+  width: 100%;
 }
 main #info {
   grid-column: 2/3;
@@ -142,6 +164,69 @@ main #info .sizes {
 #about p {
   color: #c86bfa;
   font-size: 1.3vw;
+}
+
+/* shopping cart */
+#cart-container {
+  position: fixed;
+  top: 0;
+  right: -100%;
+  transition: right 0.7s ease-in-out;
+  width: 40%;
+  height: 100vh;
+  background-color: white;
+  box-shadow: -2px 0 10px rgba(0, 0, 0, 0.2);
+  z-index: 10000;
+  padding: 20px;
+  text-transform: uppercase;
+}
+
+#cart {
+  display: flex;
+  flex-direction: column;
+  padding: 15px;
+  border-radius: 10px;
+  max-width: 250px;
+}
+
+.cart-items {
+  list-style: none;
+  padding: 0;
+  border-bottom: 1px solid black;
+}
+
+.cart-items li {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 5px;
+  margin: 5px 0;
+  border-radius: 5px;
+}
+
+.cart-buttons {
+  display: flex;
+  justify-content: space-between;
+  gap: 10px;
+}
+
+#pay-button,
+#shop-button {
+  background-color: #3d0066;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  text-transform: uppercase;
+  color: white;
+  border: none;
+  padding: 10px;
+  cursor: pointer;
+  margin-top: 10px;
+  transition: 0.3s;
+  border-radius: 30px;
+}
+
+#pay-button:hover,
+#shop-button:hover {
+  background-color: #ffee32;
 }
 
 footer {
