--- a/css/main.css
+++ b/css/main.css
@@ -132,7 +132,7 @@ header ul #cart-icon {
   margin-top: 5vh;
   position: absolute;
   left: 50%;
-  transform: translateX(-50%);
+  transform: translateX(0%);
   animation-name: leftScroll;
   animation-duration: 30s;
   animation-timing-function: linear;
@@ -270,16 +270,16 @@ header ul #cart-icon {
 .cart-items li {
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: right;
   padding: 5px;
   margin: 5px 0;
-  border-radius: 5px;
+  border-radius: 10px;
 }
 
 .cart-buttons {
   display: flex;
   justify-content: space-between;
-  gap: 10px;
+  gap: 5vw;
 }
 
 #pay-button,
