--- a/css/main.css
+++ b/css/main.css
@@ -263,16 +263,17 @@ header ul #cart-icon {
 
 .cart-items {
   list-style: none;
-  padding: 0;
+  padding: 1rem 0;
   border-bottom: 1px solid black;
+  margin-bottom: 2rem;
 }
 
 .cart-items li {
   display: flex;
   justify-content: space-between;
-  align-items: right;
-  padding: 5px;
-  margin: 5px 0;
+  align-items: center;
+  padding: 1rem 1.5rem;
+  margin: 1rem 0;
   border-radius: 10px;
 }
 
