--- a/css/detail.css
+++ b/css/detail.css
@@ -158,20 +158,12 @@ main #info .sizes {
   font-size: 2vw;
   color: #ffee32;
 }
-.size {
-  color: #03071e;
-  font-size: 1.5vw;
-  text-align: center;
-  margin: 0;
-}
-
 /* The roll out about page */
 
 #about {
   display: none;
   padding-left: 15%;
   width: 50%;
-  height: 30vw;
   max-height: 0;
   overflow: hidden;
   transition: max-height 1.5s ease-in-out;
@@ -315,4 +307,166 @@ footer .useful {
 }
 footer .contactinfo {
   grid-row: 2/3;
+}
+@media (max-width: 1000px) {
+  main #info h1 {
+    font-size: 4vw;
+  }
+  main #info h4 {
+    font-size: 3vw;
+  }
+  main #info p {
+    font-size: 2.2vw;
+  }
+  .button {
+    font-size: 2.8vw;
+  }
+  #description h1 {
+    font-size: 4vw;
+    margin-left: 10%;
+  }
+  #description #plus {
+    font-size: 4vw;
+  }
+  #about {
+    padding-left: 10%;
+  }
+  #about h1 {
+    font-size: 3vw;
+  }
+  #about p {
+    font-size: 2.3vw;
+  }
+  footer {
+    height: 50vw;
+  }
+  footer .contact-form {
+    font-size: 3vw;
+    grid-column: 1/3;
+    margin-right: 39%;
+  }
+  input[type="submit"] {
+    height: 3vw;
+    font-size: 1.8vw;
+  }
+  input[type="text"],
+  select,
+  textarea {
+    height: 3vw;
+    font-size: 1.8vw;
+  }
+  label {
+    font-size: 2vw;
+  }
+  footer h1 {
+    font-size: 3vw;
+  }
+  footer a {
+    font-size: 2vw;
+  }
+  footer p {
+    font-size: 2vw;
+  }
+}
+@media (max-width: 700px) {
+  header {
+    height: 15vw;
+  }
+  header p {
+    font-size: 5vw;
+  }
+  header ul li a {
+    font-size: 5vw;
+  }
+  main {
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr;
+    padding-top: 16vw;
+  }
+  main figure {
+    grid-column: 1/2;
+    grid-row: 1/2;
+  }
+  main #info {
+    grid-column: 1/2;
+    grid-row: 2/3;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  main #info h1 {
+    font-size: 5vw;
+  }
+  main #info h4 {
+    font-size: 4vw;
+  }
+  main #info p {
+    font-size: 3.2vw;
+  }
+  .button {
+    font-size: 3.8vw;
+  }
+  #description h1 {
+    font-size: 5vw;
+    margin-left: 10%;
+  }
+  #description #plus {
+    font-size: 5vw;
+  }
+  #about {
+    padding-left: 10%;
+  }
+  #about h1 {
+    font-size: 4vw;
+  }
+  #about p {
+    font-size: 3.3vw;
+  }
+  footer {
+    height: 160vw;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+    justify-items: start;
+  }
+
+  footer .contact-form {
+    font-size: 5vw;
+    grid-column: 1/2;
+    grid-row: 1/2;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  input[type="submit"] {
+    height: 5vw;
+    font-size: 2.5vw;
+  }
+  input[type="text"],
+  select,
+  textarea {
+    height: 5vw;
+    font-size: 2.5vw;
+  }
+  label {
+    font-size: 3vw;
+  }
+  footer h1 {
+    font-size: 5vw;
+  }
+  footer p {
+    font-size: 4vw;
+  }
+  footer a {
+    font-size: 4vw;
+  }
+  footer .info {
+    grid-row: 2/3;
+    margin-left: 10%;
+  }
+  footer .useful {
+    grid-row: 3/4;
+    margin-left: 10%;
+  }
+  footer .contactinfo {
+    grid-row: 4/5;
+    margin-left: 10%;
+  }
 }
