--- a/css/index.css
+++ b/css/index.css
@@ -9,6 +9,10 @@
 body {
   margin: 0;
   padding: 0;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 section {
@@ -17,13 +21,28 @@ section {
   grid-template-rows: repeat(4, 15vw);
   justify-items: center;
   align-items: center;
-  background-color: #3d0066;
 }
 
-video {
-  display: grid;
+figure {
+  display: flex;
+  justify-items: center;
   width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  margin: 0;
+  z-index: -1;
 }
+
+img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  position: absolute;
+  opacity: 0.2;
+}
+
 section figure {
   grid-column: 1/4;
   grid-row: 1/4;
@@ -31,9 +50,10 @@ section figure {
 section h1 {
   grid-column: 2/3;
   grid-row: 1/2;
-  color: white;
+  color: rgb(63, 5, 78);
   font-family: "Moondance";
   font-size: 3vw;
+  text-align: center;
   z-index: 10000;
 }
 
@@ -49,4 +69,9 @@ section h1 {
   text-decoration: none;
   font-size: 1.5vw;
   font-family: "Satisfy";
+}
+
+.button:hover {
+  color: #ffffff;
+  background-color: #626157;
 }
