cart made better

--- a/css/detail.css
+++ b/css/detail.css
@@ -192,7 +192,7 @@ main #info .sizes {
   top: 0;
   right: -100%;
   transition: right 0.7s ease-in-out;
-  width: 40%;
+  width: 20%;
   height: 100vh;
   background-color: white;
   box-shadow: -2px 0 10px rgba(0, 0, 0, 0.2);
@@ -344,6 +344,21 @@ footer .contactinfo {
   #about p {
     font-size: 2.3vw;
   }
+  #cart-container {
+    width: 30%;
+  }
+  .remove-btn {
+    font-size: 1.5vw;
+  }
+
+  .plus-btn {
+    font-size: 1.5vw;
+  }
+
+  .minus-btn {
+    font-size: 1.5vw;
+  }
+
   footer {
     height: 50vw;
   }
@@ -427,6 +442,20 @@ footer .contactinfo {
   }
   #about p {
     font-size: 3.3vw;
+  }
+  #cart-container {
+    width: 45%;
+  }
+  .remove-btn {
+    font-size: 2vw;
+  }
+
+  .plus-btn {
+    font-size: 2vw;
+  }
+
+  .minus-btn {
+    font-size: 2vw;
   }
   footer {
     height: 160vw;
