border on footer contact form

--- a/css/detail.css
+++ b/css/detail.css
@@ -275,6 +275,7 @@ input[type="submit"] {
   background-color: #ffee32;
   font-size: 1vw;
   border-radius: 1vw;
+  border: none;
 }
 input[type="text"],
 select,
@@ -282,6 +283,7 @@ textarea {
   height: 1.5vw;
   font-size: 1vw;
   border-radius: 1vw;
+  border: none;
 }
 label {
   font-family: "DM";
