--- a/css/main.css
+++ b/css/main.css
@@ -242,7 +242,7 @@ header ul #cart-icon {
   top: 0;
   right: -100%;
   transition: right 0.7s ease-in-out;
-  width: 20%;
+  width: 30%;
   height: 100vh;
   background-color: white;
   box-shadow: -2px 0 10px rgba(0, 0, 0, 0.2);
@@ -460,7 +460,10 @@ footer .contactinfo {
   }
 
   .description {
-    font-size: 2vw;
+    font-size: 3vw;
+  }
+  .description .price {
+    font-size: 2.7vw;
   }
 
   .plus-button {
@@ -553,6 +556,9 @@ footer .contactinfo {
 
   .description {
     font-size: 4vw;
+  }
+  .description .price {
+    font-size: 3.7vw;
   }
 
   .plus-button {
