--- a/css/detail.css
+++ b/css/detail.css
@@ -78,9 +78,16 @@ header ul li a {
   margin: 0;
   margin-left: 3%;
   margin-top: 0.5vw;
+  background-color: #9d41e8;
+  border-radius: 20vw;
+  height: 3.8vw;
+  padding-top: 0.2vw;
+  width: 4%;
+  text-align: center;
 }
 .arrow a:hover {
   color: #c86bfa;
+  background-color: #ffee32;
 }
 /* item number in cart */
 
